--- a/BioBeat/nbproject/project.properties
+++ b/BioBeat/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.jar=${dist.dir}/BioBeat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.datalibrary.jar=libs\\datalibrary.jar
 file.reference.xom-1.2.10.jar=libs/xom-1.2.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.xom-1.2.10.jar}
+    ${file.reference.xom-1.2.10.jar}:\
+    ${file.reference.datalibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -41,7 +43,8 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
