Implemented action listener

--- a/BioBeat/nbproject/project.properties
+++ b/BioBeat/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/BioBeat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.datalibrary.jar=libs\\datalibrary.jar
+file.reference.datalibrary.jar=libs/datalibrary.jar
 file.reference.xom-1.2.10.jar=libs/xom-1.2.10.jar
 includes=**
 jar.compress=false
