--- a/UserMonitor/nbproject/project.properties
+++ b/UserMonitor/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=BioBeat
-application.vendor=lenovo212
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -23,19 +22,12 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/BioBeat.jar
+dist.jar=${dist.dir}/UserMonitor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.datalibrary.jar=libs/datalibrary.jar
-file.reference.DataTransmission.jar=libs\\DataTransmission.jar
-file.reference.xom-1.2.10.jar=libs/xom-1.2.10.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.xom-1.2.10.jar}:\
-    ${file.reference.datalibrary.jar}:\
-    ${file.reference.DataTransmission.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -45,8 +37,7 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -60,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=MainPackage.CentralMain
+main.class=usermonitor.UserMonitor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
