added the xml modification to send the current song to be played changed the static paths for the base shared URI

--- a/BioBeat/nbproject/project.properties
+++ b/BioBeat/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.jar=${dist.dir}/BioBeat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.datalibrary.jar=libs/datalibrary.jar
+file.reference.DataTransmission.jar=libs/DataTransmission.jar
 file.reference.xom-1.2.10.jar=libs/xom-1.2.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.xom-1.2.10.jar}:\
-    ${file.reference.datalibrary.jar}
+    ${file.reference.DataTransmission.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
