--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,5 @@ pip-log.txt
 /BioBeat/nbproject/private/
 /DataTransmissionInterface/nbproject/private/
 /ServerPi/nbproject/private/
+/BioPlayer/nbproject/private/
+/DataTransmission/nbproject/private/
